<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/d_size_40dp">

    <android.support.design.widget.TextInputLayout
        style="@style/stl_textInputLayout">
        <EditText
            style="@style/stl_editText"

            android:id="@+id/et_Login_RF"
            android:hint="@string/s_loginHint_RF"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/stl_textInputLayout">
        <EditText
            style="@style/stl_editText"

            android:id="@+id/et_Password_RF"
            android:hint="@string/s_passwordHint_RF"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/stl_textInputLayout">
        <EditText
            style="@style/stl_editText"

            android:id="@+id/et_FirstName_RF"
            android:hint="@string/s_firstNameHint_RF"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/stl_textInputLayout">
        <EditText
            style="@style/stl_editText"

            android:id="@+id/et_LastName_RF"
            android:hint="@string/s_lastNameHint_RF"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/rg_Gender_RF"
        android:orientation="horizontal"
        android:gravity="center"

        android:layout_marginTop="@dimen/d_size_50dp" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/rb_Female_RF"
            android:text="@string/s_female_RF" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/rb_Male_RF"
            android:text="@string/s_male_RF" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/btn_Register_RF"

        android:text="@string/s_register_RF"
        android:textSize="@dimen/d_textSize_17sp"
        android:gravity="center"

        android:layout_marginTop="@dimen/d_size_50dp"/>

</LinearLayout>