<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tv_Greeting_SF"

        android:text="@string/s_greeting_SF"
        android:textSize="15sp"
        android:gravity="center"

        android:layout_marginBottom="50dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/et_Login_SF"

            android:hint="@string/s_loginHint_SF"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/et_Password_FF"

            android:hint="@string/s_passwordHint_SF"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tv_Registration_SF"

        android:clickable="true"

        android:text="@string/s_registration_SF"
        android:textSize="23sp"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        android:gravity="center"

        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/btn_SignIn_SF"

        android:text="@string/s_signIn_SF"
        android:textSize="17sp"
        android:gravity="center"

        android:layout_marginTop="50dp"/>


</LinearLayout>